; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/sys/win/extr_net.c_net_init.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/sys/win/extr_net.c_net_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"WSAStartup failed with error %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @net_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 @MAKEWORD(i32 2, i32 2)
  %5 = call i64 @WSAStartup(i32 %4, i32* %2)
  %6 = icmp slt i64 %5, 0
  %7 = zext i1 %6 to i32
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %0
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @LOGC(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %11)
  store i32 0, i32* %1, align 4
  br label %14

13:                                               ; preds = %0
  store i32 1, i32* %1, align 4
  br label %14

14:                                               ; preds = %13, %10
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i64 @WSAStartup(i32, i32*) #1

declare dso_local i32 @MAKEWORD(i32, i32) #1

declare dso_local i32 @LOGC(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
